--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,5 +1,6 @@
 <button (click) = 'which = "comp1" '>Comp1/Comp2</button>
 <button (click) = 'which = "comp3" '>Comp3/Comp4</button>
+<button (click) = 'which = "simple" '>Simple test</button>
 
 
 <hr>
@@ -7,3 +8,5 @@
 
 <app-comp1 *ngIf = 'which == "comp1" '></app-comp1>
 <app-comp3 *ngIf = 'which == "comp3" '></app-comp3>
+<app-simple-test *ngIf = 'which == "simple"'></app-simple-test>
+
